--- a/index.html
+++ b/index.html
@@ -2,27 +2,33 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Clipboard landing page</title>
+  <title>Clipboard landing page</title>
+  <link rel="stylesheet" href="./src/css/reset.css">
+  <link rel="stylesheet" href="./src/css/style.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <header>
+    <img src="./src/images/logo.svg" alt="clipboard logo">
+    <h1 class="title">A history of everything you copy</h1>
+    <p class="text">Clipboard allows you to track and organize everything you 
+      copy. Instantly access your clipboard on all your devices.</p>
+      <div class="cta-button">
+        <a href="#" class="ios">Download for iOS</a>
+        <a href="#" class="mac">Download for Mac</a>
+      </div>
+  </header>
 
-  A history of everything you copy
+  
 
-  Clipboard allows you to track and organize everything you 
-  copy. Instantly access your clipboard on all your devices.
+  
 
-  Download for iOS
-  Download for Mac
+  
+  
 
   Keep track of your snippets
 
