add section 1-6 e footer

--- a/index.html
+++ b/index.html
@@ -22,72 +22,89 @@
         <a href="#" class="mac">Download for Mac</a>
       </div>
   </header>
-
-  
-
-  
-
-  
-  
-
-  Keep track of your snippets
-
-  Clipboard instantly stores any item you copy in the cloud, 
-  meaning you can access your snippets immediately on all your 
-  devices. Our Mac and iOS apps will help you organize everything.
-
-  Quick Search
-
-  Easily search your snippets by content, category, web address, application, and more.
-
-  iCloud Sync
-
-  Instantly saves and syncs snippets across all your devices.
-
-  Complete History
-
-  Retrieve any snippets from the first moment you started using the app.
-
-  Access Clipboard anywhere
-
-  Whether you’re on the go, or at your computer, you can access all your Clipboard 
-  snippets in a few simple clicks.
-
-  Supercharge your workflow
-
-  We’ve got the tools to boost your productivity.
-
-  Create blacklists
-
-  Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
-
-  Plain text snippets
-
-  Remove unwanted formatting from copied text for a consistent look.
-
-  Sneak preview
-
-  Quick preview of all snippets on your Clipboard for easy access.
-
-  Clipboard for iOS and Mac OS
-
-  Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
-  and you’re ready to start adding to your clipboard.
-
-  Download for iOS
-  Download for Mac
-
-  FAQs
-  Contact Us
-  Privacy Policy
-  Press Kit
-  Install Guide
-  
+  <main>
+    <section class="section1">
+        <h2 class="title">Keep track of your snippets</h2>
+        <p class="text">Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.</p>
+    </section>
+    <section class="section2">
+      <img src="./src/images/image-computer.png" alt="computer screen">
+      <div>
+        <h3 class="title">Quick Search</h3>
+        <p class="text">Easily search your snippets by content, category, web address, application, and more.</p>
+        <h3 class="title">iCloud Sync</h3>
+        <p class="text">Instantly saves and syncs snippets across all your devices.</p>
+        <h3 class="title">Complete History</h3>
+        <p class="text">Retrieve any snippets from the first moment you started using the app.</p>
+      </div>
+    </section>
+    <section class="section3">
+      <h2 class="title">Access Clipboard anywhere</h2>
+      <p class="text">Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
+      <img src="./src/images/image-devices.png" alt="mobile screen">
+    </section>
+    <section class="section4">
+      <h2 class="title">Supercharge your workflow</h2>
+      <p class="text">We’ve got the tools to boost your productivity.</p>
+      <div class="tools">
+        <div class="tool">
+          <img src="./src/images/icon-blacklist.svg" alt="list icon">
+          <h3 class="title">Create blacklists</h3>
+          <p class="text">Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
+        </div>
+        <div class="tool">
+          <img src="./src/images/icon-text.svg" alt="text icon">
+          <h3 class="title">Plain text snippets</h3>
+          <p class="text">Remove unwanted formatting from copied text for a consistent look.</p>
+        </div>
+        <div class="tool">
+          <img src="./src/images/icon-preview.svg" alt="preview icon">
+          <h3 class="title">Sneak preview</h3>
+          <p class="text">Quick preview of all snippets on your Clipboard for easy access.</p>
+        </div>
+      </div>
+    </section>
+    <section class="section5">
+      <nav>
+        <ul>
+          <li><a href="https://blog.google/intl/pt-br/" target="_blank"><img src="./src/images/logo-google.png" alt="google logo"></a></li>
+          <li><a href="https://www.ibm.com/" target="_blank"><img src="./src/images/logo-ibm.png" alt="IBM logo"></a></li>
+          <li><a href="https://www.microsoft.com/" target="_blank"><img src="./src/images/logo-microsoft.png" alt="logo-microsoft logo"></a></li>
+          <li><a href="https://www.hp.com/" target="_blank"><img src="./src/images/logo-hp.png" alt="HP logo"></a></li>
+          <li><a href="#"><img src="./src/images/logo-vector-graphics.png" alt="vector graphics logo"></a></li>
+        </ul>
+      </nav>
+    </section>
+    <section class="section6">
+      <h2 class="title">Clipboard for iOS and Mac OS</h2>
+      <p class="text">Available for free on the App Store. Download for Mac or iOS, sync with iCloud and<br>
+      you’re ready to start adding to your clipboard.</p>
+      <div class="cta-button">
+        <a href="#" class="ios">Download for iOS</a>
+        <a href="#" class="mac">Download for Mac</a>
+      </div>
+    </section>
+  </main>
   <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
+    <nav class="help-links">
+      <ul>
+        <li><a href="#"><img src="./src/images/logo.svg" alt="Clipboard logo"></a></li>
+        <li><a href="#">FAQs</a></li>
+        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Press Kit</a></li>
+        <li><a href="#">Install Guide</a></li>
+      </ul>
+    </nav>
+    <nav>
+      <ul class="social-links">
+        <li><a href="https://www.facebook.com/"><img src="./src/images/icon-facebook.svg" alt="facebook icon"></a></li>
+        <li><a href="https://x.com/"><img src="./src/images/icon-x.svg" alt="x logo"></a></li>
+        <li><a href="https://www.instagram.com/"><img src="./src/images/icon-instagram.svg" alt="instagram logo"></a></li>
+      </ul>
+    </nav>
+
   </footer>
 </body>
 </html>
+
