--- a/index.html
+++ b/index.html
@@ -86,15 +86,17 @@
     </section>
   </main>
   <footer>
+    <a href="#"><img src="./src/images/logo.svg" alt="Clipboard logo"></a>
     <nav class="help-links">
       <ul>
-        <li><a href="#"><img src="./src/images/logo.svg" alt="Clipboard logo"></a></li>
         <li><a href="#">FAQs</a></li>
-        <li><a href="#">Contact Us</a></li>
         <li><a href="#">Privacy Policy</a></li>
-        <li><a href="#">Press Kit</a></li>
         <li><a href="#">Install Guide</a></li>
-      </ul>
+        </ul>
+        <ul>
+          <li><a href="#">Contact Us</a></li>
+          <li><a href="#">Press Kit</a></li>
+        </ul>
     </nav>
     <nav>
       <ul class="social-links">
