--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>Clipboard landing page</title>
   <link rel="stylesheet" href="./src/css/reset.css">
   <link rel="stylesheet" href="./src/css/style.css">
+  <link rel="stylesheet" href="./src/css/media.css">
 
 </head>
 <body>
@@ -86,23 +87,27 @@
     </section>
   </main>
   <footer>
-    <a href="#"><img src="./src/images/logo.svg" alt="Clipboard logo"></a>
+    <a href="#" class="logo"><img src="./src/images/logo.svg" alt="Clipboard logo"></a>
     <nav class="help-links">
-      <ul>
+      <ul class="links-top">
         <li><a href="#">FAQs</a></li>
         <li><a href="#">Privacy Policy</a></li>
         <li><a href="#">Install Guide</a></li>
         </ul>
-        <ul>
+        <ul class="links-bottom">
           <li><a href="#">Contact Us</a></li>
           <li><a href="#">Press Kit</a></li>
         </ul>
     </nav>
     <nav>
       <ul class="social-links">
-        <li><a href="https://www.facebook.com/"><img src="./src/images/icon-facebook.svg" alt="facebook icon"></a></li>
-        <li><a href="https://x.com/"><img src="./src/images/icon-x.svg" alt="x logo"></a></li>
-        <li><a href="https://www.instagram.com/"><img src="./src/images/icon-instagram.svg" alt="instagram logo"></a></li>
+        <li><a href="https://www.facebook.com/"><svg width="24" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M22.675 0H1.325C.593 0 0 .593 0 1.325v21.351C0 23.407.593 24 1.325 24H12.82v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116c.73 0 1.323-.593 1.323-1.325V1.325C24 .593 23.407 0 22.675 0z"/></svg></a></li>
+
+        <li><a href="https://x.com/"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="28" height="26" viewBox="0 0 50 50">
+          <path d="M 11 4 C 7.134 4 4 7.134 4 11 L 4 39 C 4 42.866 7.134 46 11 46 L 39 46 C 42.866 46 46 42.866 46 39 L 46 11 C 46 7.134 42.866 4 39 4 L 11 4 z M 13.085938 13 L 21.023438 13 L 26.660156 21.009766 L 33.5 13 L 36 13 L 27.789062 22.613281 L 37.914062 37 L 29.978516 37 L 23.4375 27.707031 L 15.5 37 L 13 37 L 22.308594 26.103516 L 13.085938 13 z M 16.914062 15 L 31.021484 35 L 34.085938 35 L 19.978516 15 L 16.914062 15 z"/>
+          </svg></a></li>
+
+        <li><a href="https://www.instagram.com/"><svg width="26" height="28" xmlns="http://www.w3.org/2000/svg"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zM12 16a4 4 0 110-8 4 4 0 010 8zm6.406-11.845a1.44 1.44 0 100 2.881 1.44 1.44 0 000-2.881z"/></svg></a></li>
       </ul>
     </nav>
 
